# vebko-bot-crawler-salary

./: Cargo.toml  README.md
src/: main.rs
