[package]
name = "tele"
version = "0.1.0"
authors = ["taher fattahi <taherfattahi11@gmail.com>"]
edition = "vebko-bot-salary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
select = "0.5.0"
telegram-bot = "0.7"
futures = "0.3"
tokio = { version = "0.2", features = ["macros", "time", "fs"] }

